test: migrate to JUnit 5 and fix a test the pom hid from mvn test
All 45 test classes move to JUnit Jupiter. The harness already shipped everything
needed — @WithJenkins, JenkinsExtension, junit-jupiter-params — so no dependency
change was required. WebhookServer becomes a BeforeEachCallback/AfterEachCallback
extension, which keeps the ordering the pipeline tests rely on: its callback runs
before @BeforeEach, so a robot can still be pointed at the captured URL during
setup. The fifteen JenkinsRule fields become an injected parameter stashed in a
plain field, so test bodies did not have to change.

Twenty-five assertions carried a JUnit 4 message-first argument, which Jupiter
spells the other way round. Every one of them was a compile error rather than a
silent inversion, so the reordering is verifiable; the seven
assertEquals(double, double, delta) calls were deliberately left alone since that
signature is unchanged.

Along the way this surfaced something more important. pom.xml excludes seven slow
JenkinsRule classes from surefire and runs them under a jenkins-rule-tests
failsafe profile, so "mvn test is green" has been covering 38 of 45 classes.
LarkStepTest, one of the excluded ones, had been failing since the batch that
removed LarkStep.buildImg: the test reflected on it with getDeclaredMethod, which
does not see inherited methods. It now reflects on AbstractStep, where the method
actually lives, with a comment saying why.

Verified both halves: 182 tests under surefire, 37 under the excluded set.